--- a/trunk/CityStoryDataTool/src/CityStoryDataTool.mxml
+++ b/trunk/CityStoryDataTool/src/CityStoryDataTool.mxml
@@ -7,13 +7,7 @@
 		<![CDATA[
 			import mx.controls.Alert;
 			
-			private var basics:Vector.<BaseBuildingVO>;
-			private var homes:Vector.<BaseBuildingVO>;
-			private var decors:Vector.<BaseBuildingVO>;
-			private var business:Vector.<BaseBuildingVO>;
-			private var industry:Vector.<BaseBuildingVO>;
-			private var wonders:Vector.<BaseBuildingVO>;
-			private var community:Vector.<BaseBuildingVO>;
+			private var shopBaseBuildings:Vector.<BaseBuildingVO>;
 			
 			private var expands:Vector.<ExpandVO> ;
 			private var levelHash:Dictionary ;
@@ -52,13 +46,7 @@
 				bytes.position =0  ;
 				var config:XML = XML( bytes.toString());
 
-				basics = new Vector.<BaseBuildingVO>();
-				homes = new Vector.<BaseBuildingVO>();
-				decors = new Vector.<BaseBuildingVO>();
-				business = new Vector.<BaseBuildingVO>();
-				industry = new Vector.<BaseBuildingVO>();
-				wonders = new Vector.<BaseBuildingVO>();
-				community = new Vector.<BaseBuildingVO>();
+				shopBaseBuildings = new Vector.<BaseBuildingVO>();
 				if( config)
 				{
 					var len:int = config.children().length();
@@ -91,30 +79,7 @@
 								
 							}
 						} 
-						switch(baseVO.type)
-						{
-							case BuildingType.BASIC:
-								basics.push( baseVO );
-								break ;
-							case BuildingType.HOME:
-								homes.push( baseVO );
-								break ;
-							case BuildingType.BUSINESS:
-								business.push( baseVO );
-								break ;
-							case BuildingType.DECORATION:
-								decors.push( baseVO );
-								break ;
-							case BuildingType.COMMUNITY:
-								community.push( baseVO );
-								break ;
-							case BuildingType.INDUSTRY:
-								industry.push( baseVO );
-								break ;
-							case BuildingType.WONDERS:
-								wonders.push( baseVO );
-								break ;
-						}
+						shopBaseBuildings.push( baseVO );
 					}
 				}
 				else
@@ -445,15 +410,7 @@
 				file.removeEventListener(Event.SELECT , onSelectedSaveFile);
 				var stream:FileStream = new FileStream();
 				stream.open( file , FileMode.WRITE );
-				
-				stream.writeObject( basics );
-				stream.writeObject( homes );
-				stream.writeObject( decors );
-				stream.writeObject( business );
-				stream.writeObject( industry );
-				stream.writeObject( wonders );
-				stream.writeObject( community );
-				
+				stream.writeObject( shopBaseBuildings );
 				stream.writeObject( expands );
 				stream.writeObject( levelHash );
 				stream.writeObject( compHash );
